<resources>
    <string name="app_name">Plate friend</string>
    <string name="digite_o_nome">Type the name</string>
    <string name="qual_o_nome_da_sua_receita">What is the name of yout recipe?</string>
    <string name="qual_o_nivel_de_complexidade">What is the complexity?</string>
    <string name="iniciante">Beginner</string>
    <string name="experiente">Experient</string>
    <string name="que_tipos_de_ingrediente_utilizara">What ingredients will use?</string>
    <string name="frescos">Fresh</string>
    <string name="congelados">Frozen</string>
    <string name="frescos_e_congelados">Fresh and Frozen</string>
    <string name="qual_a_categoria_da_receita">What is the recipe category?</string>
    <string name="salvar">Save</string>
    <string name="limpar">Clear</string>
    <string name="campos_limpos_com_sucesso">Inputs successfuly clean!</string>
    <string name="o_nome_do_prato_nao_pode_ser_vazio">Recipe name cannot be empty!</string>
    <string name="selecione_o_nivel_de_complexidade_da_receita">Select the complexity level!</string>
    <string name="selecione_o_tipo_de_ingrediente">Select ingredient types!</string>
    <string name="selecione_a_categoria_da_receita">Select recipe category!</string>
    <string name="tempo_de_preparo">Preparation time:</string>
    <string name="dificuldade">Difficulty:</string>
    <string name="categoria">Category:</string>
    <string name="nome">Name:</string>
    <string name="complexidade">Complexity:</string>
    <string name="horas">" hours"</string>
    <string name="minutos_para_preparar">" minutes to prepare!"</string>
    <string name="e_seus_ingredientes_sao">" and its ingredients are"</string>
    <string name="da_categoria">" of category "</string>
    <string name="e_de_nivel">" is a level "</string>
    <string name="a_receita">"The recipe  "</string>
    <string name="sobre_objetivo">Application that list culinary recipes, ingredients and preparation steps.</string>
    <string name="autor">Author: Guilherme Rodrigues Sussel \n Java Development for Mobile \n susselguilherme@gmail.com</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="minutos">minutes</string>
    <string name="nova_receita">New recipe</string>
    <string name="editor_receita">Edit recipe</string>
    <string name="receita_salva_com_sucesso">Recipe successfully saved!</string>
    <string name="tipo_de_ingredientes">"Ingredients type: "</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="receita_excluida_com_sucesso">Recipe deleted successfully!</string>
    <string name="intermediario">Intermediate</string>
    <string name="selecione">Select...</string>
    <string name="alimentacao_saudavel">Healthy Eating</string>
    <string name="aves">Poultry</string>
    <string name="bebidas">Beverages</string>
    <string name="bolos_tortas_salgados">Cakes and Savory Pies</string>
    <string name="carnes">Meat</string>
    <string name="doces_sobremesas">Sweets and Desserts</string>
    <string name="lanches">Snacks</string>
    <string name="massas">Pasta</string>
    <string name="peixes_frutos_mar">Fish and Seafood</string>
    <string name="saladas_molhos_acompanhamentos">Salads, Sauces, and Side Dishes</string>
    <string name="modo">Mode</string>
    <string name="modo_claro_ativado">Dark mode activated!</string>
    <string name="modo_escuro_ativado">Light mode activated!</string>
    <string name="aviso">Warning</string>
    <string name="ok">Ok</string>
    <string name="voltar">Back</string>
    <string name="confirmacao">Confirm</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_realmente_excluir_a_receita">"Do you really want to delete the recipe?\n"</string>
</resources>