<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textViewNomePrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/qual_o_nome_do_seu_prato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNomePrato"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/digite_o_nome"
            android:importantForAutofill="yes"
            android:textColorHint="@color/black"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textViewNomePrato"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomePrato" />

        <TextView
            android:id="@+id/textViewComplexidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/qual_o_nivel_de_complexidade"
            app:layout_constraintStart_toStartOf="@+id/editTextNomePrato"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomePrato" />


        <RadioGroup
            android:id="@+id/radioGroupComplexidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textViewComplexidade"
            app:layout_constraintTop_toBottomOf="@+id/textViewComplexidade">

            <RadioButton
                android:id="@+id/radioButtonIniciante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/iniciante" />

            <RadioButton
                android:id="@+id/radioButtonIntermediario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/intermediario" />

            <RadioButton
                android:id="@+id/radioButtonExperiente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/experiente" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewTiposIngredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/que_tipos_de_ingrediente_utilizara"
            app:layout_constraintStart_toStartOf="@+id/radioGroupComplexidade"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupComplexidade" />

        <CheckBox
            android:id="@+id/checkBoxFrescos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/frescos"
            app:layout_constraintStart_toStartOf="@+id/textViewTiposIngredientes"
            app:layout_constraintTop_toBottomOf="@+id/textViewTiposIngredientes" />

        <CheckBox
            android:id="@+id/checkBoxCongelados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/congelados"
            app:layout_constraintStart_toEndOf="@+id/checkBoxFrescos"
            app:layout_constraintTop_toTopOf="@+id/checkBoxFrescos" />

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/qual_a_categoria_da_receita"
            app:layout_constraintStart_toStartOf="@+id/checkBoxFrescos"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFrescos" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textViewCategoria"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategoria" />

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="salvarDados"
            android:text="@string/salvar"
            app:layout_constraintStart_toStartOf="@+id/spinnerCategoria"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintStart_toEndOf="@+id/buttonSalvar"
            app:layout_constraintTop_toTopOf="@+id/buttonSalvar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

